--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+}
 
-    //make a random change
+main div{
+    color: black;
+}
+
+main{
+    background-color: aquamarine;
 }
