--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,431 @@
-* {
+*{
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    border: 0;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-main div{
-    color: black;
+a:active, a:hover {
+    outline: 0;
 }
 
+/* Nav Bar */
+@font-face {
+    font-family: "responsivenav";
+    src: url("../icons/responsivenav.eot");
+    src: url("../icons/responsivenav.eot?#iefix") format("embedded-opentype"),
+        url("../icons/responsivenav.ttf") format("truetype"),
+        url("../icons/responsivenav.woff") format("woff"),
+        url("../icons/responsivenav.svg#responsivenav") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
+.nav-toggle {
+    text-decoration: none;
+    text-indent: -300px;
+    position: relative;
+    overflow: hidden;
+    width: 60px;
+    height: 55px;
+    float: right;
+    grid-column: 2/3;
+}
+
+.nav-toggle:before {
+    color: white; 
+    font: normal 28px/55px "responsivenav";
+    text-transform: none;
+    text-align: center;
+    position: absolute;
+    content: "\2261";
+    text-indent: 0;
+    width: 100%;
+    left: 0;
+    top: 0;
+    grid-column: 2/3;
+}
+
+.nav-toggle.active:before {
+    font-size: 24px;
+    content: "\78";
+    grid-column: 2/3;
+}
+
+.nav-collapse ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.nav-collapse li {
+    display: block;
+}
+
+.js .nav-collapse {
+    max-height: 0;
+    position: absolute;
+    display: block;
+    overflow: hidden;
+}
+
+.nav-collapse.opened {
+    max-height: 9999px;
+}
+
+header{
+    display: grid;
+    grid-template-columns: auto 60px;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(27, 27, 201);
+    padding: 10px;
+    z-index: 3;
+    width: 100%;
+    text-align: center;
+}
+
+.logo {
+    text-decoration: none;
+    font-weight: bold;
+    line-height: 55px;
+    padding: 0 20px;
+    color: white;
+}
+
+.nav-collapse,
+.nav-collapse * {
+    box-sizing: border-box;
+}
+
+.nav-collapse,
+.nav-collapse ul {
+    list-style: none;
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+
+.nav-collapse a {
+    text-decoration: none;
+    padding: 0.7em 1em;
+    color: white;
+    width: 100%;
+    display: block;
+}
+
+.nav-collapse ul ul a {
+    padding-left: 2em;
+}
+
+.title{
+    color: white;
+    padding: 10px;
+    width: fit-content;
+    grid-column: 1/2;
+}
+
+.nav-collapse{
+    grid-column: 1/3;
+}
+
+li a:hover, li a:focus{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+
+/* Main Body */
 main{
-    background-color: aquamarine;
+    display: grid;
+    grid-template-rows: 0.2fr 0.5fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+    "first"
+    "form"
+    "pics";
+    justify-items: center;
+    align-content: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+.firstblock{
+    height: 200px;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 10px;
+    gap: 20px;
+    box-shadow: 0px 0px 10px 0px rgba(85, 85, 85, 0.5);
+    grid-area: first;
+}
+
+.welcome{
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.words, .welcome{
+    text-align: center;
+}
+
+.more{
+    width: 25%;
+    height: 40px;
+    background-color: rgb(27, 27, 201);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transition: background-color 0.3s ease;
+}
+
+.more:hover, .more:focus{
+    background-color: rgb(255, 47, 193);
+}
+
+.more a{
+    text-decoration: none;
+    color: white;
+}
+
+h1{
+    font-size:20px;
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+/* form */
+legend{
+    width: 90%;
+    text-align: left;
+}
+
+.form{
+    margin: 10px;
+    height: 400px;
+    width: 80%;
+    gap: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 10px 0px rgba(85, 85, 85, 0.5);
+    grid-area: form;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+fieldset{
+    border: none;
+    margin: 20px;
+    width: 90%;
+}
+
+form div{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+label{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+input{
+    border-radius: 10px;
+    height: 50px;
+    border: 1px solid black;
+}
+
+input:hover, input:focus{
+    outline: 1px solid black;
+}
+
+button {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background-image: linear-gradient(to right, rgb(255, 47, 193) 0%, rgb(27, 27, 201) 50%);
+    background-size: 200%;
+    background-position: 20%;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-position 0.5s ease;
+}
+
+button:hover, button:focus {
+    background-position: right; 
+    font-weight: bold;
+}
+
+/* Picture Lane */
+.pics{
+    height: 700px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    gap: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(85, 85, 85, 0.5);
+    grid-area: pics;
+}
+
+.pic1{
+    height: 30%;
+    width: 90%;
+    background-image: url(../img/DSCF9764.JPG);
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+}
+
+.pic2{
+    height: 30%;
+    width: 90%;
+    background-image: url(../img/875f3e13cc4ff7c7d29d788e4f532fa4.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+}
+
+.pic3{
+    height: 30%;
+    width: 90%;
+    background-image: url(../img/IMG_0989.JPG);
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+}
+
+@keyframes popout{
+    0% {
+        transform: scale(1.0);
+    }
+    100% {
+        transform: scale(1.1);
+    }
+}
+.pic1:hover, .pic2:hover, .pic3:hover, .pic1:focus, .pic2:focus, .pic3:focus {
+    animation: popout ease forwards 1s alternate;
+}
+
+.pic1, .pic2, .pic3{
+    animation: popin 1s ease forwards;
+}
+
+@keyframes popin{
+    0% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1.0);
+    }
+}
+
+footer{
+    background-color: rgb(27, 27, 201);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100px;
+    color: white;
+}
+
+/* Desktop View */
+@media screen and (min-width: 768px) {
+    .nav-collapse ul {
+        flex-direction: row;
+        align-items: flex-end;
+    }
+
+    .nav-collapse li {
+        width: auto;
+    }
+
+    .nav-collapse a {
+        padding: 1.02em 2em;
+        text-align: center;
+        border-top: 0;
+        margin: 0;
+    }
+
+    .nav-collapse ul ul a {
+        display: none;
+    }
+
+    .nav-collapse.closed {
+        max-height: none;
+    }
+    .nav-toggle {
+        display: none;
+    }
+    .nav-collapse{
+        width: 50%;
+    }
+
+    .firstblock, .form{
+        height: 400px;
+    }
+
+    .firstblock{
+        gap:40px;
+    }
+
+    .welcome{
+        font-size: 2.5em;
+    }
+
+    .more{
+        height: 60px;
+        font-size: 1.2em;
+    }
+
+    .words{
+        font-size: 1.5em;
+    }
+
+    button{
+        font-size: 1em;
+    }
+
+    .pics{
+        flex-direction: row;
+        height: auto;
+        width: 95%;
+    }
+
+    .pic1, .pic2, .pic3{
+        width: 300px;
+        height: 300px;
+    }
+
+    header{
+        display: flex;
+    }
+
+    main{
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1.5fr;
+        grid-template-areas: 
+        "first form"
+        "pics pics";
+    }
 }
