--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,16 @@ main{
 }
 
 
-
+/* Footer */
+footer{
+    background-color: rgb(234, 125, 81);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100px;
+    color: white;
+}
 
 
 /* Desktop View */
