--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,8 @@ main{
     width: 100%;
 }
 
+
+/* Top Picks */
 .trending{
     height: 1100px;
     width: 90%;
@@ -54,6 +56,8 @@ main{
     font-size: 16px;
 }
 
+
+/* Categories */
 .categories{
     display: flex;
     align-items: center;
@@ -84,6 +88,8 @@ main{
     font-weight: bold;
     transform: scale(1.1);
 }
+
+/* Forum */
 
 .forum{
     height: 500px;
