--- a/css/apointment.css
+++ b/css/apointment.css
@@ -1,6 +1,13 @@
 *{
     font-family: 'Courier New', Courier, monospace;
 }
+
+body{
+    background-image: url('backimage1.png');
+    background-size: cover; 
+    background-repeat: repeat-y;
+    background-position: center; 
+}
 .survey{
     display: flex;
     align-items: center;
@@ -62,7 +69,7 @@ fieldset{
 }
 
 .button:hover {
-    background-color: #0056b3;
+    background-color: #00153B;
 }
 
 
@@ -74,12 +81,26 @@ fieldset{
 }
 
 .restaurant {
-    text-align: center;
     background-color: #fff;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.parent-container {
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+    min-height: 100vh;
+    background-image: url('backimage2.png');
+    background-size: cover; 
+    background-repeat: repeat-y;
+    background-position: center; 
 }
 
 
