--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header{
     grid-template-columns: auto 60px;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(234, 125, 81);
+    background-color: #00153B;
     padding: 10px;
     z-index: 3;
     width: auto;
@@ -146,7 +146,7 @@ main{
 
 /* Footer */
 footer{
-    background-color: rgb(234, 125, 81);
+    background-color: #00153B;
     display: flex;
     align-items: center;
     justify-content: center;
