--- a/css/menu.css
+++ b/css/menu.css
@@ -23,6 +23,19 @@ body {
 main {
     padding: 1em;
     height: auto;
+    width: auto;
+    margin: 1em;
+    background-color: rgba(255, 255, 255, 0.856);
+    border: 2px solid #0eb1d2;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    line-height: 1.6;
+}
+
+.main2 {
+    padding: 1em;
+    height: auto;
+    width: auto;
     margin: 1em;
     background-color: rgba(255, 255, 255, 0.856);
     border: 2px solid #0eb1d2;
@@ -72,6 +85,7 @@ main {
 }
 
 @media screen and (max-width: 768px) {
+
     .menu-item {
         flex-direction: column;
         align-items: flex-start;
