--- a/css/menu.css
+++ b/css/menu.css
@@ -96,6 +96,41 @@ main {
     }
 }
 
+@media screen and (min-width: 768px) {
+    body {
+        display: grid;
+        grid-template-rows: auto 1fr auto;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    header {
+        grid-column: 1 / -1;
+        grid-row: 1;
+    }
+
+    footer {
+        grid-column: 1 / -1;
+        grid-row: 6;
+    }
+
+    main {
+        grid-column: 1 / 2;
+        grid-row: 2 / 4;
+    }
+
+    .main2 {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    #menu-info {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+    }
+}
+
+
+
 #menu-info {
     margin: 1em;
     padding: 1.5em;
