--- a/css/about.css
+++ b/css/about.css
@@ -129,7 +129,7 @@ main{
   object-fit: cover; 
   border: 3px solid #ccc; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  transition: transform 200ms;
+  transition: transform 200ms ease;
   
 }
 .chef-card img:hover{
