--- a/css/about.css
+++ b/css/about.css
@@ -29,6 +29,7 @@ main{
   border-radius: 10px;
 }
 
+
 .history{
   display: flex;
   flex-direction: column;
@@ -38,6 +39,7 @@ main{
   margin: 40px;
      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
      padding:10px;
+     font-size: 1.2rem; 
 }
 .philosophy{
   display: flex;
@@ -48,7 +50,12 @@ main{
     margin: 40px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
      padding:10px;
-     
+     font-size: 1.5rem; 
+}
+
+
+#pic3{
+  height: 265px;
 }
 
 .Philosophycontent blockquote {
@@ -60,7 +67,7 @@ main{
   border-left: 5px solid #ccc; 
   padding: 10px 20px; 
   margin: 20px auto; 
-  max-width: 600px; 
+  max-width: 700px; 
   background-color: #f9f9f9; 
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
   border-radius: 5px; 
@@ -110,6 +117,7 @@ main{
   text-align:left;
   width: 200px;
   margin: 10px;
+
  
 }
 
@@ -121,7 +129,7 @@ main{
   object-fit: cover; 
   border: 3px solid #ccc; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  transition: transform 200ms;
+  transition: transform 20ms ease;
   
 }
 .chef-card img:hover{
@@ -146,13 +154,14 @@ main{
     margin: 40px;
 }
 
-
 .image-container {
   display: flex;
+  flex-direction: row;
   justify-content: center; 
   align-items: center; 
-  max-width: 80%; 
+  width:40%;
   margin: 0 auto; 
+  /* border:2px solid black; */
 }
 .scalable {
   width: 80%;
