--- a/css/apointment.css
+++ b/css/apointment.css
@@ -2,17 +2,18 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-body{
+.appoint{
     background-image: url('backimage1.png');
     background-size: cover; 
     background-repeat: repeat-y;
     background-position: center; 
 }
+
 .survey{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: aquamarine;
+    background-color: #7eeef1;
     width: 40%;
     margin: 25px auto;
     border-radius: 50px;
@@ -121,17 +122,4 @@ fieldset{
     font-size: 1em;
     color: #333;
     margin: 5px 0;
-}
-
-
-
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 0px 0;
-    margin-bottom: 0px;
-    font-size: 14px;
-    width: 100%;
-    margin-top: auto;
 }
