--- a/css/about.css
+++ b/css/about.css
@@ -10,6 +10,25 @@ main{
   padding: 20px; 
 }
 
+.abouttitle{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(_DSF1426.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.abouttitle h1{
+  color: #f1d871;
+  -webkit-text-stroke: black 2px;
+  font-size: 8vw;
+  font-weight: bold;
+  letter-spacing: 5px;
+}
+
 .image-container {
   display: flex;
   flex-direction: column;  
@@ -109,7 +128,6 @@ main{
   justify-content: center; 
   gap: 20px; 
   flex-wrap: wrap; 
-  
 }
 
 
@@ -117,8 +135,6 @@ main{
   text-align:left;
   width: 200px;
   margin: 10px;
-
- 
 }
 
 
