--- a/css/home.css
+++ b/css/home.css
@@ -300,49 +300,84 @@ main{
 
 .newsletters{
     height: 350px;
-    width: 65%;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 10px 0px rgba(85, 85, 85, 0.5);
     margin: 20px 0;
     text-align: center;
 }
 
-.newsletters h1{
-    font-size: 30px;
+form {
+    max-width: 900px;
+    margin: 10px auto;
+    border-radius: 8px;
 }
 
-.newsletters p{
-    line-height: 30px;
+h1 {
+    margin: 10px 0;
+    text-align: center;
+}
+
+p{
+    margin-top: 30px;
     font-size: 16px;
 }
-
-.subpics{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    width: 90%;
+input[type="email"] {
+    background: rgba(255, 255, 255, 0.1);
+    border: 2px solid transparent;
+    font-size: 16px;
+    height: auto;
+    margin: 0;
+    outline: 0;
+    padding: 15px;
+    width: 75%;
+    background-color: #f5f5f5;
+    color: #8a97a0;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    margin-bottom: 30px;
+    transition: all 350ms;
 }
 
-.button a{
-    color: white;
+input::placeholder{
+    color: hsla(9, 100%, 64%, 0.6);
 }
 
-.button{
-    background-color: brown;
+input:hover,
+input:focus {
+    border: 2px solid hsla(9, 100%, 64%, 0.6);
+}
+
+label:required {
+    color: yellow;
+}
+
+button {
+    padding: 19px 39px 18px 39px;
+    color: #fff;
+    background-color: rgb(234, 125, 81);
+    font-size: 18px;
     text-align: center;
-    padding: 15px 20px;
-    border-radius: 10px;
-    color: white;
-    transition: transform ease 0.5s;
+    font-style: normal;
+    border-radius: 5px;
+    border: none;
+    width: 90%;
+    transition: all 350ms;
+    cursor: pointer;
 }
 
-.button:hover, .button:focus{
-    font-weight: bold;
-    transform: scale(1.1);
+button:hover,
+button:focus {
+    background-color: hsla(9, 100%, 64%, 0.8);
+    color: black;
+    border-color: #8a97a0;
+    
+}
+
+fieldset {
+    border: none;
 }
 
 /* Forum */
