--- a/css/Submitted.css
+++ b/css/Submitted.css
@@ -34,6 +34,6 @@ h1 {
     transition: background-color 0.3s;
 }
 
-.button:hover {
+.button:hover, .button:focus {
     background-color: #0056b3;
 }
