--- a/css/about.css
+++ b/css/about.css
@@ -19,7 +19,7 @@ main{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(_DSF1426.jpg);
+  background-image: url(DSF1426.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
