--- a/css/menu.css
+++ b/css/menu.css
@@ -56,33 +56,73 @@ main {
     font-family: 'Courier New', Courier;
 }
 
-.menu-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 1em;
-}
-
-.menu-item h3 {
-    font-size: 1.2rem;
-    margin: 0;
-    flex: 2;
-    font-family: 'Courier New', Courier;
-}
-
-.description {
-    flex: 3;
-    margin-left: 1em;
-    color: black;
-    font-family: 'Courier New', Courier
-}
-
 .price {
-    flex: 1;
-    text-align: right;
     font-weight: bold;
-    color: black;
 }
+
+@media screen and (min-width: 768px) {
+    .menu-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-bottom: 1em;
+    }
+
+    .menu-item h3 {
+        font-size: 1.2rem;
+        margin: 0;
+        flex: 2;
+        font-family: 'Courier New', Courier;
+    }
+
+    .description {
+        flex: 3;
+        margin-left: 1em;
+        color: black;
+        font-family: 'Courier New', Courier;
+    }
+
+    .price {
+        flex: 1;
+        text-align: right;
+        font-weight: bold;
+        color: black;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        display: grid;
+        grid-template-rows: auto 1fr auto;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    header {
+        grid-column: 1 / -1;
+        grid-row: 1;
+    }
+
+    footer {
+        grid-column: 1 / -1;
+        grid-row: 6;
+    }
+
+    main {
+        grid-column: 1 / 2;
+        grid-row: 2 / 4;
+    }
+
+    .main2 {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    #menu-info {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+    }
+}
+
 
 
 #menu-info {
@@ -140,49 +180,4 @@ main {
 
 footer {
     background-color: #00153B;
-}
-
-@media screen and (min-width: 768px) {
-    body {
-        display: grid;
-        grid-template-rows: auto 1fr auto;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    header {
-        grid-column: 1 / -1;
-        grid-row: 1;
-    }
-
-    footer {
-        grid-column: 1 / -1;
-        grid-row: 6;
-    }
-
-    main {
-        grid-column: 1 / 2;
-        grid-row: 2 / 4;
-    }
-
-    .main2 {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-    }
-
-    #menu-info {
-        grid-column: 2 / 3;
-        grid-row: 3 / 4;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
-    .menu-item {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .description, .price {
-        margin-left: 0;
-        text-align: left;
-    }
 }
