--- a/css/apointment.css
+++ b/css/apointment.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #7eeef1;
+    background-color: #bcfdff;
     width: 40%;
     margin: 25px auto;
     border-radius: 50px;
@@ -63,7 +63,7 @@ fieldset{
     padding: 10px 10px;
     font-size: 16px;
     color: white;
-    background-color: #007BFF;
+    background-color: #1ca9c9;
     text-decoration: none;
     border-radius: 5px;
     text-align: center;
