--- a/css/home.css
+++ b/css/home.css
@@ -327,7 +327,7 @@ form p{
 }
 input[type="email"] {
     background: rgba(255, 255, 255, 0.1);
-    border: 2px solid transparent;
+    border: 1px solid #1ca9c9;
     font-size: 16px;
     height: auto;
     margin: 0;
@@ -338,16 +338,16 @@ input[type="email"] {
     color: #8a97a0;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 30px;
-    transition: all 350ms;
+    transition: all 350ms ease;
 }
 
 input::placeholder{
-    color: hsla(9, 100%, 64%, 0.6);
+    color: #1ca9c9;
 }
 
 input:hover,
 input:focus {
-    border: 2px solid hsla(9, 100%, 64%, 0.6);
+    outline: 2px solid #1ca9c9;
 }
 
 label:required {
@@ -357,21 +357,22 @@ label:required {
 button {
     padding: 19px 39px 18px 39px;
     color: #fff;
-    background-color: rgb(234, 125, 81);
+    background-color: #1a8ca5;
     font-size: 18px;
     text-align: center;
     font-style: normal;
     border-radius: 5px;
     border: none;
     width: 90%;
-    transition: all 350ms;
+    transition: all 0.5s ease;
     cursor: pointer;
 }
 
 button:hover,
 button:focus {
-    background-color: hsla(9, 100%, 64%, 0.8);
-    color: black;
+    background-color: #1ca9c9;
+    color: white;
+    font-weight: bold;
     border-color: #8a97a0;
     
 }
